--- a/map/index.html
+++ b/map/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Wraith Canyon Map</title>
 </head>
 
 <body>
     <header>
-        <div class="adventure-title">Bounty Hunter: Wraith Canyon</div>
+        <div class="adventure-title">Wraith Canyon</div>
     </header>
     <main>
         <span>You survey your surroundings and see three caves...</span>
@@ -24,7 +24,7 @@
     <footer>
     </footer>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./map.js"></script>
 </body>
 
 </html>
