quest pages loading now

--- a/map/index.html
+++ b/map/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <span>You survey your surroundings and see three caves...</span>
-        <section>
+        <section class="map-area">
             <div>
                 <ul>
 
