results feedback working

--- a/results/index.html
+++ b/results/index.html
@@ -12,14 +12,14 @@
         <div class="adventure-title">Wraith Canyon: Results</div>
     </header>
     <main>
-        <section class="map-area">
+        <section class="results-area">
             <h1></h1>
-            <img>
             <p></p>
-            <form>
 
-            </form>
         </section>
+        <nav class="button-box">
+            <button id="replay">play again</button>
+        </nav>
     </main>
     <footer>
     </footer>
