choice results div and button to return to map

--- a/quest/index.html
+++ b/quest/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
     <title>Cave Quest Navigator</title>
 </head>
@@ -19,6 +21,10 @@
             <form>
 
             </form>
+            <nav id="nav-options">
+                <span></span>
+                <button id="return">return to map</button>
+            </nav>
         </section>
     </main>
     <footer>
