displayStats function developed and deployed on quest.js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 <body>
     <header>
-        <div class="adventure-title">Bounty Hunter: Wraith Canyon</div>
+        <div class="adventure-title">Bounty Hunter: The Caves of Wraith Canyon</div>
+        <div id="player-stats">
+            <span id="player-health"></span>
+            <span id="player-credits"></span>
+        </div>
     </header>
     <main>
         <section>
