--- a/results/index.html
+++ b/results/index.html
@@ -12,6 +12,10 @@
 <body>
     <header>
         <div class="adventure-title">Wraith Canyon: Results</div>
+        <div id="player-stats">
+            <span id="player-health"></span>
+            <span id="player-credits"></span>
+        </div>
     </header>
     <main>
         <section class="results-area">
