--- a/quest/index.html
+++ b/quest/index.html
@@ -11,7 +11,11 @@
 
 <body>
     <header>
-        <div class="adventure-title">Wraith Canyon</div>
+        <div class="adventure-title">The Caves of Wraith Canyon</div>
+        <div id="player-stats">
+            <span id="player-health"></span>
+            <span id="player-credits"></span>
+        </div>
     </header>
     <main>
         <section class="map-area">
