--- a/results/index.html
+++ b/results/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
     <title>Outcomes</title>
@@ -11,11 +13,15 @@
 
 <body>
     <header>
-        <div class="adventure-title">Wraith Canyon: Results</div>
-        <div id="player-stats">
-            <span id="player-health"></span>
-            <span id="player-credits"></span>
+        <div class="logo-box">
+            <img src="../assets/mando-circle-orange_small.png" id="logo-image" height="75"></span>
         </div>
+        <div class="game-head"><span class="adventure-title">Wraith Canyon: Results</span></div>
+        <div id="player-stats">
+            <div id="player-stats">
+                <span id="player-health"></span>
+                <span id="player-credits"></span>
+            </div>
     </header>
     <main>
         <section class="results-area">
