css styling mitigation

--- a/index.html
+++ b/index.html
@@ -21,14 +21,19 @@
         </section>
         <section class="title-bar">
             <div class="logo-box">
-                <img src="./assets/mando-circle-orange_small.png" id="logo-image" height="75">
+                <img src="" id="logo-image">
             </div>
             <div class="adventure-title">Bounty Hunter: The Caves of Wraith Canyon</div>
+            <div class-="aurora-colors">
+                <div id="aurora-top"><img src="./assets/helmet-top.png" height="40"></div>
+                <div id="aurora-middle"><img src="./assets/helmet-middle.png" height="53"></div>
+                <div id="aurora-bottom"><img src="./assets/helmet-bottom.png" height="42"></div>
+            </div>
         </section>
         <section class="border-bar"></section>
-
     </header>
-    <main>
+    <main class="start-screen">
+        <section class="left-side"></section>
         <section class="game-start">
             <form class="user-controls">
                 <label>
@@ -52,6 +57,7 @@
             </form>
             <div></div>
         </section>
+        <section class="right-side"></section>
     </main>
     <footer>
     </footer>
