--- a/map/index.html
+++ b/map/index.html
@@ -7,23 +7,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/quest-pages.css">
     <title>Wraith Canyon Map</title>
 </head>
 
 <body>
     <header>
-        <div class="logo-box">
-            <img src="../assets/mando-circle-orange_small.png" id="logo-image" height="75"></span>
-        </div>
-        <div class="game-head"><span class="adventure-title">The Caves of Wraith Canyon</span></div>
-        <div id="player-stats">
-            <span id="player-health"></span>
-            <span id="player-credits"></span>
-        </div>
+        <section class="top-bar">
+            <div id="player-stats">
+                <span id="player-health"></span>
+                <span id="player-credits"></span>
+            </div>
+        </section>
+        <section class="title-bar">
+            <div class="logo-box">
+                <img src="" id="logo-image">
+            </div>
+            <div class="adventure-title">The caves await...</div>
+            <div class-="aurora-colors">
+                <div id="aurora-top"><img src="../assets/helmet-top.png" height="40"></div>
+                <div id="aurora-middle"><img src="../assets/helmet-middle.png" height="53"></div>
+                <div id="aurora-bottom"><img src="../assets/helmet-bottom.png" height="42"></div>
+            </div>
+        </section>
+        <section class="border-bar"></section>
     </header>
     <main>
-        <span>You survey your surroundings and see three caves...</span>
+        <span class="lead-text">You survey your surroundings and see three caves...</span>
         <section class="map-area">
             <div>
                 <ul>
