--- a/quest/index.html
+++ b/quest/index.html
@@ -7,34 +7,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/quest-pages.css">
     <title>Cave Quest Navigator</title>
 </head>
 
 <body>
     <header>
-        <div class="logo-box">
-            <img src="../assets/mando-circle-orange_small.png" id="logo-image" height="75"></span>
-        </div>
-        <div class="game-head"><span class="adventure-title">The Caves of Wraith Canyon</span></div>
-        <div id="player-stats">
+        <section class="top-bar">
             <div id="player-stats">
                 <span id="player-health"></span>
                 <span id="player-credits"></span>
             </div>
+        </section>
+        <section class="title-bar">
+            <div class="logo-box">
+                <img src="" id="logo-image">
+            </div>
+            <div class="adventure-title">the hunt is afoot</div>
+            <div class-="aurora-colors">
+                <div id="aurora-top"><img src="../assets/helmet-top.png" height="40"></div>
+                <div id="aurora-middle"><img src="../assets/helmet-middle.png" height="53"></div>
+                <div id="aurora-bottom"><img src="../assets/helmet-bottom.png" height="42"></div>
+            </div>
+        </section>
+        <section class="border-bar"></section>
     </header>
-    <main>
-        <section class="map-area">
+    <main class="quest-flex">
+        <section class="quest-scene">
             <h1></h1>
             <img>
             <p></p>
+        </section>
+        <section class="quest-area">
             <form>
 
             </form>
-            <nav id="nav-options">
-                <span id="choice-result"></span>
-                <button id="return">return to map</button>
-            </nav>
+        </section>
+        <nav id="nav-options">
+            <span id="choice-result"></span>
+            <button id="return">return to map</button>
+        </nav>
         </section>
     </main>
     <footer>
