--- a/results/index.html
+++ b/results/index.html
@@ -7,21 +7,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/quest-pages.css">
     <title>Outcomes</title>
 </head>
 
 <body>
     <header>
-        <div class="logo-box">
-            <img src="../assets/mando-circle-orange_small.png" id="logo-image" height="75"></span>
-        </div>
-        <div class="game-head"><span class="adventure-title">Wraith Canyon: Results</span></div>
-        <div id="player-stats">
+        <section class="top-bar">
             <div id="player-stats">
                 <span id="player-health"></span>
                 <span id="player-credits"></span>
             </div>
+        </section>
+        <section class="title-bar">
+            <div class="logo-box">
+                <img src="" id="logo-image">
+            </div>
+            <div class="adventure-title">Wraith Canyon: Results</div>
+            <div class-="aurora-colors">
+                <div id="aurora-top"><img src="../assets/helmet-top.png" height="40"></div>
+                <div id="aurora-middle"><img src="../assets/helmet-middle.png" height="53"></div>
+                <div id="aurora-bottom"><img src="../assets/helmet-bottom.png" height="42"></div>
+            </div>
+        </section>
+        <section class="border-bar"></section>
     </header>
     <main>
         <section class="results-area">
