quest image positioning and clearStats fix

--- a/map/index.html
+++ b/map/index.html
@@ -20,9 +20,7 @@
             </div>
         </section>
         <section class="title-bar">
-            <div class="logo-box">
-                <img src="" id="logo-image">
-            </div>
+            <div></div>
             <div class="adventure-title">The caves await...</div>
             <div class-="aurora-colors">
                 <div id="aurora-top"><img src="../assets/helmet-top.png" height="40"></div>
