--- a/quest/index.html
+++ b/quest/index.html
@@ -37,7 +37,7 @@
     <main class="quest-flex">
         <section class="quest-scene">
             <h1></h1>
-            <img>
+            <img id="quest-image">
             <p></p>
         </section>
         <section class="quest-area">
